// Vitest Snapshot v1

exports[`affects custom imports: !flip 1`] = `
[
  "/assets/dog-9a9fbf08.jpeg",
]
`;

exports[`affects custom imports: blur 1`] = `
[
  "/assets/dog-633250ad.jpeg",
]
`;

exports[`affects custom imports: blur&!flip 1`] = `
[
  "/assets/dog-633250ad.jpeg",
]
`;

exports[`affects custom imports: blur=true 1`] = `
[
  "/assets/dog-633250ad.jpeg",
]
`;

exports[`affects custom imports: width=500,600&height=800&width=400 1`] = `
[
  "/assets/dog-f9bb58b3.jpeg",
  "/assets/dog-88a85387.jpeg",
  "/assets/dog-adabbc87.jpeg",
]
`;

exports[`affects custom imports: width=600 1`] = `
[
  "/assets/dog-88a85387.jpeg",
]
`;

exports[`affects custom imports: width=600&blur&height=400 1`] = `
[
  "/assets/dog-6ca67b9c.jpeg",
]
`;

exports[`affects custom imports: width=600&height=400 1`] = `
[
  "/assets/dog-2d621bfe.jpeg",
]
`;

exports[`affects custom imports: width=600,800&height=400,500 1`] = `
[
  "/assets/dog-2d621bfe.jpeg",
  "/assets/dog-af2d5f89.jpeg",
  "/assets/dog-81677fe4.jpeg",
  "/assets/dog-af0e2b48.jpeg",
]
`;

exports[`affects custom imports: width=600,800,1000 1`] = `
[
  "/assets/dog-88a85387.jpeg",
  "/assets/dog-98297939.jpeg",
  "/assets/dog-c851a66b.jpeg",
]
`;

exports[`does not affect default imports:  1`] = `"/assets/dog-1b15ce03.jpg"`;

exports[`does not affect default imports: ?foo=bar 1`] = `"/assets/dog-1b15ce03.jpg?foo=bar"`;

exports[`does not affect default imports: ?foo=bar#baz-qux 1`] = `"/assets/dog-1b15ce03.jpg?foo=bar#baz-qux"`;
